Nuevos personajes agregados

--- a/seccion4.html
+++ b/seccion4.html
@@ -142,34 +142,140 @@
           style="--img: url(images/personajes/dragonball/goku-joven.jpg)" data-txt="Goku"></div>
       </div>
       <!--Patrulla Roja-->
-      <h2 class="personajes__imagenes-h2"><span class="dragon">Patrulla</span> <span class="ball">Roja</span></h2>
+      <h3 class="personajes__imagenes-h3"><span class="dragon">Patrulla </span> <span class="ball">Roja</span></h3>
       <div class="personajes__cont" onmouseover="hoverPersonajes(5)" onmouseout="restaurarPersonajes(5)" id="tanda5">
         <div class="personajes__cont-box personajes__cont-box33"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/1-comandante-red.png)" data-txt="Comandante Red"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/1-comandante-red.png)" data-txt="Comandante Red">
+        </div>
         <div class="personajes__cont-box personajes__cont-box34"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/2-oficial-black.webp)" data-txt="Oficial Black"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/2-oficial-black.webp)" data-txt="Oficial Black">
+        </div>
         <div class="personajes__cont-box personajes__cont-box35"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/3-coronelViolet.webp)" data-txt="Coronel Violet"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/3-coronelViolet.webp)" data-txt="Coronel Violet">
+        </div>
         <div class="personajes__cont-box personajes__cont-box36"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/4-generalBlue.webp)" data-txt="General Blue"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/4-generalBlue.webp)" data-txt="General Blue">
+        </div>
         <div class="personajes__cont-box personajes__cont-box37"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/5-capitanSilver.jpg)" data-txt="Caitan Silver"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/5-capitanSilver.jpg)" data-txt="Caitan Silver">
+        </div>
         <div class="personajes__cont-box personajes__cont-box38"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/6-sargentoMetallic.webp)" data-txt="Sargento Metallic"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/6-sargentoMetallic.webp)"
+          data-txt="Sargento Metallic"></div>
         <div class="personajes__cont-box personajes__cont-box39"
           style="--img: url(images/personajes/dragonball/patrulla-roja/7-dock.webp)" data-txt="Dock"></div>
         <div class="personajes__cont-box personajes__cont-box40"
-          style="--img: url(images/personajes/dragonball/patrulla-roja/8-octavioSuno.png)" data-txt="Octavio y Suno"></div>
+          style="--img: url(images/personajes/dragonball/patrulla-roja/8-octavioSuno.png)" data-txt="Octavio y Suno">
+        </div>
       </div>
     </section>
     <section id="dragonballz">
       <hr id="dragonballz-hr">
-      <section style="height: 100vh;" id="sayayin">
+      <section id="sayayin">
         <h2 class="personajes__imagenes-h2"><span class="dragon">Dragon</span> <span class="ball">BallZ</span></h2>
+        <h3 class="personajes__imagenes-h3"><span class="dragon">Saga </span> <span class="ball">Saiyayin</span></h3>
+        <div class="personajes__cont personajes__contNueve" onmouseover="hoverPersonajes(6)"
+          onmouseout="restaurarPersonajes(6)" id="tanda6">
+          <div class="personajes__cont-box personajes__cont-box41"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/1-goku-joven.jpg)" data-txt="Goku"></div>
+          <div class="personajes__cont-box personajes__cont-box42"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/2-gohan-nino.webp)" data-txt="Gohan"></div>
+          <div class="personajes__cont-box personajes__cont-box43"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/3-picoro.webp)" data-txt="Picoro"></div>
+          <div class="personajes__cont-box personajes__cont-box44"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/4-raditz.webp)" data-txt="Raditz"></div>
+          <div class="personajes__cont-box personajes__cont-box45"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/5-kaiosama.webp)" data-txt="Kaio-Sama"></div>
+          <div class="personajes__cont-box personajes__cont-box46"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/6-bubbles.webp)" data-txt="Bubbles"></div>
+          <div class="personajes__cont-box personajes__cont-box47"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/7-gregori.webp)" data-txt="Gregori"></div>
+          <div class="personajes__cont-box personajes__cont-box48"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/8-nappa.webp)" data-txt="Nappa"></div>
+          <div class="personajes__cont-box personajes__cont-box48"
+            style="--img: url(images/personajes/dragonball-z/saiyayin/9-vegeta.webp)" data-txt="Vegeta"></div>
+        </div>
       </section>
-      <section style="height: 100vh;" id="freezer">freezer</section>
-      <section style="height: 100vh;" id="androides">cell</section>
-      <section style="height: 100vh;" id="majin">majin bu</section>
+      <section id="freezer">
+        <h3 class="personajes__imagenes-h3"><span class="dragon">Saga </span> <span class="ball">Freezer</span></h3>
+        <div class="personajes__cont" onmouseover="hoverPersonajes(7)" onmouseout="restaurarPersonajes(7)" id="tanda7">
+          <div class="personajes__cont-box personajes__cont-box49"
+            style="--img: url(images/personajes/dragonball-z/freezer/1-dende-nino.jpg)" data-txt="Dende"></div>
+          <div class="personajes__cont-box personajes__cont-box50"
+            style="--img: url(images/personajes/dragonball-z/freezer/2-gran-patriarca.jpg)" data-txt="Gran Patriarca">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box51"
+            style="--img: url(images/personajes/dragonball-z/freezer/3-nail.webp)" data-txt="Nail"></div>
+          <div class="personajes__cont-box personajes__cont-box52"
+            style="--img: url(images/personajes/dragonball-z/freezer/4-bulma.webp)" data-txt="Bulma"></div>
+          <div class="personajes__cont-box personajes__cont-box53"
+            style="--img: url(images/personajes/dragonball-z/freezer/5-gohan.webp)" data-txt="Gohan"></div>
+          <div class="personajes__cont-box personajes__cont-box54"
+            style="--img: url(images/personajes/dragonball-z/freezer/6-krilin.jpg)" data-txt="Krilin"></div>
+          <div class="personajes__cont-box personajes__cont-box55"
+            style="--img: url(images/personajes/dragonball-z/freezer/7-goku-ssj.jpg)" data-txt="Goku SSJ"></div>
+          <div class="personajes__cont-box personajes__cont-box56"
+            style="--img: url(images/personajes/dragonball-z/freezer/8-porunga.jpg)" data-txt="Porunga"></div>
+        </div>
+        <h3 class="personajes__imagenes-h3"><span class="dragon">Ejercito de </span> <span class="ball">Freezer</span>
+        </h3>
+        <div class="personajes__cont personajes__contNueve" onmouseover="hoverPersonajes(8)"
+          onmouseout="restaurarPersonajes(8)" id="tanda8">
+          <div class="personajes__cont-box personajes__cont-box57"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/1-cui.jpg)" data-txt="Cui"></div>
+          <div class="personajes__cont-box personajes__cont-box58"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/2-dodoria.webp)" data-txt="Dodoria">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box59"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/3-freezer.webp)" data-txt="Freezer"></div>
+          <div class="personajes__cont-box personajes__cont-box60"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/4-freezerDos.webp)"
+            data-txt="Primera Transformacion">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box61"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/5-freezerTres.webp)"
+            data-txt="Segunda Transformacion">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box62"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/6-freezerCuatro.webp)"
+            data-txt="Tercera Transformacion">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box63"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/7-freezerCien.webp)"
+            data-txt="Maximo Poder"></div>
+          <div class="personajes__cont-box personajes__cont-box64"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/8-zarbon.webp)" data-txt="Zarbon"></div>
+          <div class="personajes__cont-box personajes__cont-box65"
+            style="--img: url(images/personajes/dragonball-z/freezer/ejercito/9-zarbonDos.webp)"
+            data-txt="Zarbon Transformacion">
+          </div>
+        </div>
+        <h3 class="personajes__imagenes-h3"><span class="dragon">Fuerzas Especiales </span> <span class="ball">Ginyu</span>
+        </h3>
+        <div class="personajes__cont personajes__contCinco" onmouseover="hoverPersonajes(9)"
+          onmouseout="restaurarPersonajes(9)" id="tanda9">
+          <div class="personajes__cont-box personajes__cont-box57"
+            style="--img: url(images/personajes/dragonball-z/freezer/ginyu/1-recoome.jpg)" data-txt="Recoome"></div>
+          <div class="personajes__cont-box personajes__cont-box58"
+            style="--img: url(images/personajes/dragonball-z/freezer/ginyu/2-gurdo.jpg)" data-txt="Gurdo">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box59"
+            style="--img: url(images/personajes/dragonball-z/freezer/ginyu/3-ginyu.jpg)" data-txt="Ginyu"></div>
+          <div class="personajes__cont-box personajes__cont-box60"
+            style="--img: url(images/personajes/dragonball-z/freezer/ginyu/4-jeice.jpg)" data-txt="Jeice">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box61"
+            style="--img: url(images/personajes/dragonball-z/freezer/ginyu/5-butter.jpg)" data-txt="Butter">
+          </div>
+        </div>
+      </section>
+      <section id="androides">
+        <h2 class="personajes__imagenes-h2"><span class="dragon">Saga </span> <span class="ball">Androides/Cell</span>
+        </h2>
+      </section>
+      <section id="majin">
+        <h2 class="personajes__imagenes-h2"><span class="dragon">Saga </span> <span class="ball">Majin Bu</span></h2>
+      </section>
     </section>
     <section style="height: 100vh;" id="dragonballsuper">Dragon ball super</section>
   </main>
