--- a/seccion4.html
+++ b/seccion4.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
 
-    <title>Personajes</title>
+  <title>Personajes</title>
   <!-- site: BootstrapCDN-->
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
@@ -31,7 +31,7 @@
   <title>Personajes</title>
 </head>
 
- 
+
 <body id="personajes">
   <nav class="header">
     <a href="index.html"><img src="images/logodragonball.png" /> </a>
@@ -62,7 +62,7 @@
             <option value="#majin">Saga Majin Buu</option>
           </select>
         </li>
-        <li><a href="#dragonballsuper">Dragon Ball Super</a></li>
+        <li><a href="#dragonballsuper-hr">Dragon Ball Super</a></li>
       </ul>
     </div>
   </header>
@@ -256,7 +256,8 @@
             data-txt="Zarbon Transformacion">
           </div>
         </div>
-        <h3 class="personajes__imagenes-h3"><span class="dragon">Fuerzas Especiales </span> <span class="ball">Ginyu</span>
+        <h3 class="personajes__imagenes-h3"><span class="dragon">Fuerzas Especiales </span> <span
+            class="ball">Ginyu</span>
         </h3>
         <div class="personajes__cont personajes__contCinco" onmouseover="hoverPersonajes(9)"
           onmouseout="restaurarPersonajes(9)" id="tanda9">
@@ -278,12 +279,162 @@
       <section id="androides">
         <h2 class="personajes__imagenes-h2"><span class="dragon">Saga </span> <span class="ball">Androides/Cell</span>
         </h2>
+        <div class="personajes__cont" onmouseover="hoverPersonajes(10)" onmouseout="restaurarPersonajes(10)"
+          id="tanda10">
+          <div class="personajes__cont-box personajes__cont-box62"
+            style="--img: url(images/personajes/dragonball-z/cell/androide16.webp)" data-txt="Androide 16"></div>
+          <div class="personajes__cont-box personajes__cont-box63"
+            style="--img: url(images/personajes/dragonball-z/cell/androide17.webp)" data-txt="Androide 17">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box64"
+            style="--img: url(images/personajes/dragonball-z/cell/androide18.webp)" data-txt="Androide 18"></div>
+          <div class="personajes__cont-box personajes__cont-box65"
+            style="--img: url(images/personajes/dragonball-z/cell/androide19.webp)" data-txt="Androide 19">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box66"
+            style="--img: url(images/personajes/dragonball-z/cell/androide20.webp)" data-txt="Dr. Maki Gero">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box67"
+            style="--img: url(images/personajes/dragonball-z/cell/cellPrimeraForma.webp)" data-txt="Cell">
+          </div>
+          <div class="personajes__cont-box personajes__cont-68"
+            style="--img: url(images/personajes/dragonball-z/cell/cellSegundaForma.webp)" data-txt="Cell Semiperfecto">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box69"
+            style="--img: url(images/personajes/dragonball-z/cell/cellPerfecto.webp)" data-txt="Cell Perfecto"></div>
+        </div>
+        <div class="personajes__cont" onmouseover="hoverPersonajes(11)" onmouseout="restaurarPersonajes(11)"
+          id="tanda11">
+          <div class="personajes__cont-box personajes__cont-box70"
+            style="--img: url(images/personajes/dragonball-z/cell/gokussj.webp)" data-txt="Goku SSJ"></div>
+          <div class="personajes__cont-box personajes__cont-box71"
+            style="--img: url(images/personajes/dragonball-z/cell/gohanssj.webp)" data-txt="Gohan SSJ">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box72"
+            style="--img: url(images/personajes/dragonball-z/cell/gohanssj2.webp)" data-txt="Gohan SSJ2"></div>
+          <div class="personajes__cont-box personajes__cont-box73"
+            style="--img: url(images/personajes/dragonball-z/cell/vegetassj.webp)" data-txt="Vegeta SSJ">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box74"
+            style="--img: url(images/personajes/dragonball-z/cell/mrSatan.webp)" data-txt="Mr. Satan">
+          </div>
+          <div class="personajes__cont-box personajes__cont-box75"
+            style="--img: url(images/personajes/dragonball-z/cell/trunksDelFuturo2.webp)" data-txt="Trunks del Futuro">
+          </div>
+          <div class="personajes__cont-box personajes__cont-76"
+            style="--img: url(images/personajes/dragonball-z/cell/trunksDelFuturo1.webp)"
+            data-txt="Trunks del Futuro SSJ"></div>
+          <div class="personajes__cont-box personajes__cont-box77"
+            style="--img: url(images/personajes/dragonball-z/cell/metalFreezer-Cold.webp)"
+            data-txt="Freezer Remodelado y King Cold"></div>
+        </div>
       </section>
       <section id="majin">
         <h2 class="personajes__imagenes-h2"><span class="dragon">Saga </span> <span class="ball">Majin Bu</span></h2>
+        <div class="personajes__cont personajes__contNueve" onmouseover="hoverPersonajes(12)"
+          onmouseout="restaurarPersonajes(12)" id="tanda12">
+          <div class="personajes__cont-box personajes__cont-box78"
+            style="--img: url(images/personajes/dragonball-z/buu/granSaiyanman.webp)" data-txt="Gran Saiyaman"></div>
+          <div class="personajes__cont-box personajes__cont-box79"
+            style="--img: url(images/personajes/dragonball-z/buu/videl.webp)" data-txt="Videl"></div>
+          <div class="personajes__cont-box personajes__cont-box80"
+            style="--img: url(images/personajes/dragonball-z/buu/gotenTrunks.webp)" data-txt="Goten y Trunks"></div>
+          <div class="personajes__cont-box personajes__cont-box81"
+            style="--img: url(images/personajes/dragonball-z/buu/shinKibito.webp)" data-txt="Kaio Shin y Kibito"></div>
+          <div class="personajes__cont-box personajes__cont-box82"
+            style="--img: url(images/personajes/dragonball-z/buu/gohanMistico.webp)" data-txt="Gohan Mistico"></div>
+          <div class="personajes__cont-box personajes__cont-box83"
+            style="--img: url(images/personajes/dragonball-z/buu/gokuSSJ3.webp)" data-txt="Goku SSJ3"></div>
+          <div class="personajes__cont-box personajes__cont-box84"
+            style="--img: url(images/personajes/dragonball-z/buu/gotenks.webp)" data-txt="Gotenks"></div>
+          <div class="personajes__cont-box personajes__cont-box85"
+            style="--img: url(images/personajes/dragonball-z/buu/gotenksSSJ3.webp)" data-txt="Gotenks SSJ3"></div>
+          <div class="personajes__cont-box personajes__cont-box86"
+            style="--img: url(images/personajes/dragonball-z/buu/antiguoSupremoKaioSama.webp)"
+            data-txt="Supremo Kaio Sama"></div>
+        </div>
+        <div class="personajes__cont personajes__contNueve" onmouseover="hoverPersonajes(13)"
+          onmouseout="restaurarPersonajes(13)" id="tanda13">
+          <div class="personajes__cont-box personajes__cont-box87"
+            style="--img: url(images/personajes/dragonball-z/buu/babidi.webp)" data-txt="Babidi"></div>
+          <div class="personajes__cont-box personajes__cont-box88"
+            style="--img: url(images/personajes/dragonball-z/buu/dabura.webp)" data-txt="Dabura"></div>
+          <div class="personajes__cont-box personajes__cont-box89"
+            style="--img: url(images/personajes/dragonball-z/buu/puipui.webp)" data-txt="Pui Pui"></div>
+          <div class="personajes__cont-box personajes__cont-box90"
+            style="--img: url(images/personajes/dragonball-z/buu/yakon.webp)" data-txt="Yakon"></div>
+          <div class="personajes__cont-box personajes__cont-box91"
+            style="--img: url(images/personajes/dragonball-z/buu/majinBuu.webp)" data-txt="Majin Buu"></div>
+          <div class="personajes__cont-box personajes__cont-box92"
+            style="--img: url(images/personajes/dragonball-z/buu/superBuu.webp)" data-txt="Super Buu"></div>
+          <div class="personajes__cont-box personajes__cont-box93"
+            style="--img: url(images/personajes/dragonball-z/buu/kidBuu.webp)" data-txt="Kid Buu"></div>
+          <div class="personajes__cont-box personajes__cont-box94"
+            style="--img: url(images/personajes/dragonball-z/buu/majinVegeta.webp)" data-txt="Majin Vegeta"></div>
+          <div class="personajes__cont-box personajes__cont-box95"
+            style="--img: url(images/personajes/dragonball-z/buu/vegito.webp)" data-txt="Vegito"></div>
+        </div>
       </section>
     </section>
-    <section style="height: 100vh;" id="dragonballsuper">Dragon ball super</section>
+    <hr id="dragonballsuper-hr">
+    <section style="height: 100vh;">
+      <h2 class="personajes__imagenes-h2"><span class="dragon">DragonBall </span> <span class="ball">Super</span></h2>
+      <div class="personajes__cont" onmouseover="hoverPersonajes(14)" onmouseout="restaurarPersonajes(14)" id="tanda14">
+        <div class="personajes__cont-box personajes__cont-box96"
+          style="--img: url(images/personajes/dragonball-super/bills.webp)" data-txt="Bills"></div>
+        <div class="personajes__cont-box personajes__cont-box97"
+          style="--img: url(images/personajes/dragonball-super/whis.webp)" data-txt="Whiss"></div>
+        <div class="personajes__cont-box personajes__cont-box98"
+          style="--img: url(images/personajes/dragonball-super/gokuDios.webp)" data-txt="Goku SSJ Dios"></div>
+        <div class="personajes__cont-box personajes__cont-box99"
+          style="--img: url(images/personajes/dragonball-super/gokuBlue.webp)" data-txt="Goku SSJ Blue"></div>
+        <div class="personajes__cont-box personajes__cont-box100"
+          style="--img: url(images/personajes/dragonball-super/vegetablue.webp)" data-txt="Vegeta SSJ Blue"></div>
+        <div class="personajes__cont-box personajes__cont-box101"
+          style="--img: url(images/personajes/dragonball-super/goldenFreezer.webp)" data-txt="Golden Freezer"></div>
+        <div class="personajes__cont-box personajes__cont-box102"
+          style="--img: url(images/personajes/dragonball-super/champa.webp)" data-txt="Champa"></div>
+        <div class="personajes__cont-box personajes__cont-box103"
+          style="--img: url(images/personajes/dragonball-super/vados.webp)" data-txt="Vados"></div>
+      </div>
+      <div class="personajes__cont" onmouseover="hoverPersonajes(15)" onmouseout="restaurarPersonajes(15)" id="tanda15">
+        <div class="personajes__cont-box personajes__cont-box104"
+          style="--img: url(images/personajes/dragonball-super/zamasu.webp)" data-txt="Zamasu"></div>
+        <div class="personajes__cont-box personajes__cont-box105"
+          style="--img: url(images/personajes/dragonball-super/gokuBlack.webp)" data-txt="Goku Black"></div>
+        <div class="personajes__cont-box personajes__cont-box106"
+          style="--img: url(images/personajes/dragonball-super/hit.webp)" data-txt="Hit"></div>
+        <div class="personajes__cont-box personajes__cont-box107"
+          style="--img: url(images/personajes/dragonball-super/cabba.webp)" data-txt="Cabba"></div>
+        <div class="personajes__cont-box personajes__cont-box108"
+          style="--img: url(images/personajes/dragonball-super/frost.webp)" data-txt="Frost"></div>
+        <div class="personajes__cont-box personajes__cont-box109"
+          style="--img: url(images/personajes/dragonball-super/magetta.webp)" data-txt="Magetta"></div>
+        <div class="personajes__cont-box personajes__cont-box110"
+          style="--img: url(images/personajes/dragonball-super/botamo.webp)" data-txt="Botamo"></div>
+        <div class="personajes__cont-box personajes__cont-box111"
+          style="--img: url(images/personajes/dragonball-super/monaka.webp)" data-txt="Monaka"></div>
+      </div>
+      <div class="personajes__cont" onmouseover="hoverPersonajes(16)" onmouseout="restaurarPersonajes(16)" id="tanda16">
+        <div class="personajes__cont-box personajes__cont-box112"
+          style="--img: url(images/personajes/dragonball-super/zenoSama.webp)" data-txt="Zeno Sama"></div>
+        <div class="personajes__cont-box personajes__cont-box113"
+          style="--img: url(images/personajes/dragonball-super/guardias.webp)" data-txt="Guardias"></div>
+        <div class="personajes__cont-box personajes__cont-box114"
+          style="--img: url(images/personajes/dragonball-super/granSacerdote.webp)" data-txt="Gran Sacerdote"></div>
+        <div class="personajes__cont-box personajes__cont-box115"
+          style="--img: url(images/personajes/dragonball-super/jaco.webp)" data-txt="Jaco"></div>
+        <div class="personajes__cont-box personajes__cont-box116"
+          style="--img: url(images/personajes/dragonball-super/oraculo.webp)" data-txt="Oraculo"></div>
+        <div class="personajes__cont-box personajes__cont-box117"
+          style="--img: url(images/personajes/dragonball-super/superShenLong.webp)" data-txt="Super Shen Long"></div>
+        <div class="personajes__cont-box personajes__cont-box118"
+          style="--img: url(images/personajes/dragonball-super/gokuUltraInstinto.webp)" data-txt="Ultra Instinto"></div>
+        <div class="personajes__cont-box personajes__cont-box119"
+          style="--img: url(images/personajes/dragonball-super/gokuUltraInstintoDominado.webp)"
+          data-txt="Ultra Instinto Dominado"></div>
+      </div>
+    </section>
   </main>
   <footer></footer>
   <script src="script.js"></script>
