--- a/seccion3.html
+++ b/seccion3.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
 
+    <link rel="stylesheet" href="responsive.css">
   <title>Mangas</title>
 </head>
 
