--- a/seccion4.html
+++ b/seccion4.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
 
-
+  <link rel="stylesheet" href="responsive.css">
 
   <title>Personajes</title>
 </head>
@@ -277,7 +277,7 @@
         </div>
       </section>
       <section id="androides">
-        <h2 class="personajes__imagenes-h2"><span class="dragon">Saga </span> <span class="ball">Androides/Cell</span>
+        <h2 class="personajes__imagenes-h2 personajes__imagenes-h2-cell"><span class="dragon">Saga </span><span class="ball">Androides/Cell</span>
         </h2>
         <div class="personajes__cont" onmouseover="hoverPersonajes(10)" onmouseout="restaurarPersonajes(10)"
           id="tanda10">
@@ -377,7 +377,7 @@
       </section>
     </section>
     <hr id="dragonballsuper-hr">
-    <section style="height: 100vh;">
+    <section>
       <h2 class="personajes__imagenes-h2"><span class="dragon">DragonBall </span> <span class="ball">Super</span></h2>
       <div class="personajes__cont" onmouseover="hoverPersonajes(14)" onmouseout="restaurarPersonajes(14)" id="tanda14">
         <div class="personajes__cont-box personajes__cont-box96"
