--- a/seccion4.html
+++ b/seccion4.html
@@ -26,12 +26,15 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 
 
   <title>Personajes</title>
 </head>
 
- 
+
+
 <body id="personajes">
   <nav class="header">
     <a href="index.html"><img src="images/logodragonball.png" /> </a>
@@ -47,6 +50,18 @@
       </ul>
     </div>
   </nav>
+
+
+
+  <button id="abrir-nav-links" class="menuHamburguesa">
+    <i class="fas fa-bars"></i>
+  </button>
+
+  <div class="cerrar-menu">
+    <i class="fas fa-times"></i>
+  </div>
+
+
   <header id="personajes-header">
     <div>
       <h1>Estos son los principales personajes de la serie <br> <span class="dragon">Dragon</span> <span
@@ -287,6 +302,31 @@
   </main>
   <footer></footer>
   <script src="script.js"></script>
+
+  <footer class="footer">
+    <h4>Dragon Ball Fan blog 2023</h4>
+    <p>
+      Este sitio ha sido creado para la entrega final del trabajo de Codo a Codo.
+    </p>
+
+    <!--iconos del sitio: iconify -->
+    <div class="icons">
+      <!--facebook logo-->
+      <iconify-icon icon="logos:facebook"></iconify-icon>
+      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <!--twitter logo-->
+      <iconify-icon icon="skill-icons:twitter"></iconify-icon>
+      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <!--Instagram logo-->
+      <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <!--Linkedin logo-->
+      <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
+      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    </div>
+  </footer>
+
+
 </body>
 
 </html>
